--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@
   ), hsl(240, 2%, 13%);
   --bg-gradient-yellow-1: linear-gradient(
     to bottom right, 
-    hsl(45, 100%, 71%) 0%, 
+    hsl(29, 100%, 50%) 0%, 
     hsla(36, 100%, 69%, 0) 50%
   );
   --bg-gradient-yellow-2: linear-gradient(
@@ -50,21 +50,21 @@
   );
   --text-gradient-yellow: linear-gradient(
     to right, 
-    hsl(45, 100%, 72%), 
-    hsl(35, 100%, 68%)
+    hsl(29, 100%, 50%) 0%, 
+    hsl(29, 100%, 50%) 0%
   );
 
   /* solid */
 
-  --jet: hsl(0, 0%, 22%);
+  --jet: hsl(27, 66%, 33%);
   --onyx: hsl(240, 1%, 17%);
-  --eerie-black-1: hsl(240, 2%, 13%);
-  --eerie-black-2: hsl(240, 2%, 12%);
-  --smoky-black: hsl(0, 0%, 7%);
-  --white-1: hsl(0, 0%, 100%);
-  --white-2: hsl(0, 0%, 98%);
-  --orange-yellow-crayola: hsl(45, 100%, 72%);
-  --vegas-gold: hsl(45, 54%, 58%);
+  --eerie-black-1: hsl(0, 0%, 15%);
+  --eerie-black-2: hsl(0, 4%, 5%);
+  --smoky-black: hsl(0, 2%, 9%);
+  --white-1: hsl(0, 6%, 66%);
+  --white-2: hsl(0, 7%, 73%);
+  --orange-yellow-crayola:  hsl(29, 100%, 50%) ;
+  --vegas-gold:  hsl(29, 100%, 50%) ;
   --light-gray: hsl(0, 0%, 84%);
   --light-gray-70: hsla(0, 0%, 84%, 0.7);
   --bittersweet-shimmer: hsl(0, 43%, 51%);
