--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -827,46 +827,36 @@ main {
   line-height: 1.6;
 }
 
+.skills-title { 
+  margin-bottom: 20px;
+  margin-top: 30px;
+  color: #c5bdbd; /* Same color as timeline-list span */
+  margin-left: 7%;
+  font-size: 140%;
+}
 
-/**
- * skills 
- */
+.skills-list { 
+  padding: 20px;
+  margin-left: 8.5%; /* Shift to the right by 10% */
+}
 
-.skills-title { margin-bottom: 20px; }
+.skills-item:not(:last-child) { 
+  margin-bottom: 15px;
+}
 
-.skills-list { padding: 20px; }
-
-
-.skills-item:not(:last-child) { margin-bottom: 15px; }
-
-.skill .title-wrapper {
+.title-wrapper {
   display: flex;
   align-items: center;
   gap: 5px;
   margin-bottom: 8px;
+  color: #f5f5f5;
 }
 
-.skill .title-wrapper data {
-  color: var(--light-gray);
+.title-wrapper data {
+  color: var(--light-gray); /* Same color as timeline-text */
   font-size: var(--fs-7);
   font-weight: var(--fw-300);
-}
-
-.skill-progress-bg {
-  background: var(--jet);
-  width: 100%;
-  height: 8px;
-  border-radius: 10px;
-}
-
-.skill-progress-fill {
-  background: var(--text-gradient-yellow);
-  height: 100%;
-  border-radius: inherit;
-}
-
-
-
+  }
 
 
 /*-----------------------------------*\
